--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.assignmentvi_intent">
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,15 +12,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AssignmentVI_Intent"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.AssignmentVI_Intent"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity
+            android:name=".SummaryActivity"
+            android:theme="@style/Theme.AssignmentVI_Intent"
+            android:exported="true"/>
+        <activity
+            android:name=".SearchActivity"
+            android:theme="@style/Theme.AssignmentVI_Intent"
+            android:exported="true"/>
+        <activity
+            android:name=".UpdateActivity"
+            android:theme="@style/Theme.AssignmentVI_Intent"
+            android:exported="true"/>
 
+    </application>
 </manifest>
